Fikset code smells og oppdatert test